codepkg/objects/Card__c.object
<CustomObject>
    <fields>
        <fullName>Bank_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>BankAccount__c</referenceTo>
        <relationshipLabel>Cards</relationshipLabel>
        <relationshipName>Cards</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BlockCheck__c</fullName>
        <formula>IF(( Valid_thru__c -  TODAY() ) &lt;= 0, &quot;block&quot;, &quot;no&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BlockCheck</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BlockNormal__c</fullName>
        <label>BlockNormal</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CardNumber__c</fullName>
        <label>Сard Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Valid_thru__c</fullName>
        <formula>DATE( YEAR( ADDMONTHS(  DATEVALUE(CreatedDate) ,48)) , MONTH( DATEVALUE(CreatedDate) ) ,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Valid thru</label>
        <type>Date</type>
    </fields>
    <label>Card</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>